# repair

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
repair_calendar_view/: README.rst  __manifest__.py
repair_calendar_view/i18n/: it.po  repair_calendar_view.pot
repair_discount/: README.rst  __manifest__.py
repair_discount/i18n/: de.po  es.po  fr.po  hr.po  hr_HR.po  it.po  lt.po  (+3 more)
repair_duration/: README.rst  __manifest__.py
repair_picking_after_done/: README.rst  __manifest__.py
repair_procurement/: README.rst  __manifest__.py
repair_purchase_return/: README.rst  __manifest__.py
repair_quality_control/: README.rst  __manifest__.py
repair_reason/: README.rst  __manifest__.py
repair_refurbish/: README.rst  __manifest__.py
repair_refurbish_repair_stock_move/: README.rst  __manifest__.py
repair_reinvoice/: README.rst  __manifest__.py  hooks.py
repair_sale_order/: README.rst  __manifest__.py
repair_scrap/: README.rst  __manifest__.py
repair_security/: README.rst  __manifest__.py  hook.py
repair_stock/: README.rst  __manifest__.py
repair_stock_dest/: README.rst  __manifest__.py
repair_stock_move/: README.rst  __manifest__.py
repair_substate/: README.rst  __manifest__.py
repair_timesheet/: README.rst  __manifest__.py
repair_type/: README.rst  __manifest__.py
repair_type_refurbish/: README.rst  __manifest__.py
repair_type_security/: README.rst  __init__.py  __manifest__.py  hook.py
repair_type_sequence/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+197 files in other folders)
