[project]
name = "odoo-addons-oca-repair"
version = "17.0.20241024.0"
dependencies = [
    "odoo-addon-repair_quality_control>=17.0dev,<17.1dev",
    "odoo-addon-repair_type>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
